<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/settingPrivateInfoLayout_contentTitle"
        style="@style/corinContentTitleTextView"
        android:text="@string/settingPrivateInfoLayout_contentTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/settingPrivateInfoLayout_nameEditText"
        style="@style/corinEditText"
        android:hint="@string/settingPrivateInfoLayout_nameEditTextHint"
        android:autofillHints=".AUTOFILL_HINT_PERSON_NAME"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingPrivateInfoLayout_contentTitle" />

    <EditText
        android:id="@+id/settingPrivateInfoLayout_ageEditText"
        style="@style/corinEditText"
        android:hint="@string/settingPrivateInfoLayout_ageEditTextHint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingPrivateInfoLayout_nameEditText"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/settingPrivateInfoLayout_genderGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/settingPrivateInfoLayout_ageEditText"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/settingPrivateInfoLayout_genderSeceret"
            style="@style/corinChip"
            android:checked="true"
            android:text="@string/settingPrivateInfoLayout_secreteChipText" />

        <com.google.android.material.chip.Chip
            android:id="@+id/settingPrivateInfoLayout_genderMan"
            style="@style/corinChip"
            android:text="@string/settingPrivateInfoLayout_manChipText" />

        <com.google.android.material.chip.Chip
            android:id="@+id/settingPrivateInfoLayout_genderWomen"
            style="@style/corinChip"
            android:text="@string/settingPrivateInfoLayout_womenChipText" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>