<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".corinDomain.domain.loginActivity.LoginActivity"
    >

    <com.example.corincoronacheckincustomer.jshCrossDomain.view.widget.JSHToolBar
        android:id="@+id/jshToolbar"
        style="@style/jshToolBar"
        app:jshToolBar_button_image="@drawable/ic_jsh_close"
        app:jshToolBar_title=""
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginActivity_corinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginActivity_corinTextViewText"
        android:textColor="@color/corin_middleBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jshToolbar" />

    <EditText
        android:id="@+id/loginActivity_emailEditText"
        style="@style/corinEditText"
        android:layout_marginTop="12dp"
        android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
        android:hint="@string/loginActivity_emailEditTextHint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_corinTextView" />

    <EditText
        android:id="@+id/loginActivity_passwordEditText"
        style="@style/corinEditText"
        android:autofillHints=".AUTOFILL_HINT_PASSWORD"
        android:hint="@string/loginActivity_passwordEditTextHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_emailEditText" />

    <CheckBox
        android:id="@+id/loginActivity_autoLoginCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginActivity_autoLoginCheckBoxText"
        android:textSize="13sp"
        android:textColor="@android:color/tab_indicator_text"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_passwordEditText" />

    <TextView
        android:id="@+id/loginActivity_findIdTextView"
        style="@style/corinButtonTextView"
        android:text="@string/loginActivity_findIdTextViewText"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginActivity_findPasswordTextView"
        app:layout_constraintEnd_toStartOf="@+id/loginActivity_verticalDivider"
        app:layout_constraintTop_toTopOf="@+id/loginActivity_findPasswordTextView" />

    <View
        android:id="@+id/loginActivity_verticalDivider"
        style="@style/verticalDivider"
        android:layout_height="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginActivity_findPasswordTextView"
        app:layout_constraintEnd_toStartOf="@+id/loginActivity_findPasswordTextView"
        app:layout_constraintTop_toTopOf="@+id/loginActivity_findPasswordTextView" />

    <TextView
        android:id="@+id/loginActivity_findPasswordTextView"
        style="@style/corinButtonTextView"
        android:text="@string/loginActivity_findPasswordTextViewText"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginActivity_autoLoginCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginActivity_autoLoginCheckBox" />

    <Button
        android:id="@+id/loginActivity_loginButton"
        style="@style/corinFragmentActionButton"
        android:text="@string/loginActivity_loginButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_autoLoginCheckBox" />

    <TextView
        android:id="@+id/loginActivity_isCorinFirstTextView"
        style="@style/corinDescriptionTextView"
        android:text="@string/loginActivity_isCorinFirstTextViewText"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/loginActivity_signUpTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_loginButton" />

    <TextView
        android:id="@+id/loginActivity_signUpTextView"
        style="@style/corinAccentButtonTextView"
        android:text="@string/loginActivity_signUpTextViewText"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loginActivity_isCorinFirstTextView"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>