<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/settingSignUpInfoLayout_contentTitle"
        style="@style/corinContentTitleTextView"
        android:text="@string/settingSignUpInfoLayout_contentTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/settingSignUpInfoLayout_emailEditText"
        style="@style/corinEditText"
        android:hint="@string/settingSignUpInfoLayout_emailEditTextHint"
        android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingSignUpInfoLayout_contentTitle" />

    <EditText
        android:id="@+id/settingSignUpInfoLayout_passwordEditText"
        style="@style/corinEditText"
        android:hint="@string/settingSignUpInfoLayout_passwordEditTextHint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingSignUpInfoLayout_emailEditText" />

    <EditText
        android:id="@+id/settingSignUpInfoLayout_passwordCheckEditText"
        style="@style/corinEditText"
        android:hint="@string/settingSignUpInfoLayout_passwordCheckEditTextHint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingSignUpInfoLayout_passwordEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>